--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
 									<a href="{{ path('achat') }}">Achat</a>
 									<a href="{{ path('vente') }}">Vente</a>
 									<a href="{{ path('comptabilite') }}">Comptabilité</a>
-									<a href="{{ path('registration') }}">Users</a>
+									<a href="{{ path('users') }}">Users</a>
 									{% if is_granted('ROLE_ADMIN') %}
 										<a href="{{ path('logout') }}">Déconnexion</a>
 									{% endif %}
